--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,6 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#blogs">Blogs</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-
                 </ul>        
             </nav>
             <!-- END NAV BAR     -->
@@ -31,10 +29,12 @@
                 </div>
                 <h2 id="left-side-text">I am a Data Scientist </h2>
                 
-                <h2 id="right-side-text">WebDev is hard</h2>            
+                <h2 id="right-side-text"><i>Always eager to learn</i></h2>            
             </section>
             <!-- END HOME SECTION -->
             
+
+
             <!-- START PROJECTS SECTION -->
             <section id="projects">
                 <h1>Here are some projects</h1>
@@ -49,11 +49,8 @@
                         </div></a>
 
 
-                        <a href="https://github.com/dorjeys3/twitter_sentiment_analysis" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://cdn.dribbble.com/users/1161517/screenshots/7896076/apple-logo-animation.gif)">
+                        <a href="https://github.com/dorjeys3/twitter_sentiment_analysis" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://images.squarespace-cdn.com/content/v1/5677193fc21b8664a2043441/1570696883020-F3E9ALUE4NR6AYK1TW72/ke17ZwdGBToddI8pDm48kHUzxcQwd2DgHE3KO6VtZClZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZamWLI2zvYWH8K3-s_4yszcp2ryTI0HqTOaaUohrI8PI1qPlfs3HYKbanWcQQqBRZmpTq4czOe8Acgsq9n8pASg/Apple+Logo+Animation)">
                             <div class="img-text-wrapper" >
-                                <div class="logo-wrapper">
-                                    <img src="static/images/github-logo.jpeg" alt ="">
-                                </div>
 
                                 <p class="subtitle">
                                     Anazlyzed sentiments of 3 major Apple events in 2020 using Twint.
@@ -62,12 +59,8 @@
                         </div></a>
 
 
-                        <a href="https://github.com/dorjeys3/Hotel-Cancellation-Model" target="_blank"><div class="portfolio-item-wrapper"style="background-image:url(https://media3.giphy.com/media/xT0xenntJ5zPXwRI4w/source.gif)">
+                        <a href="https://github.com/dorjeys3/Hotel-Cancellation-Model" target="_blank"><div class="portfolio-item-wrapper"style="background-image:url(https://cdn.dribbble.com/users/2859475/screenshots/7551660/media/a6aa2061e5693b544d883e842c479728.gif)">
                             <div class="img-text-wrapper">
-                                <div class="logo-wrapper">
-                                    <img src="static/images/github-logo.jpeg" alt ="">
-                                </div>
-
                                 <p class="subtitle">
                                     Created a model to predict hotel reservation cancelation.
                                 </p>
@@ -76,10 +69,6 @@
 
                         <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
                             <div class="img-text-wrapper">
-                                <div class="logo-wrapper">
-                                    <img src="static/images/logos/github-logo.png" alt ="">
-                                </div>
-
                                 <p class="subtitle">
                                     Created a model to predict hotel reservation cancelation.
                                 </p>
@@ -88,10 +77,6 @@
 
                         <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
                             <div class="img-text-wrapper">
-                                <div class="logo-wrapper">
-                                    <img src="static/images/logos/github-logo.png" alt ="">
-                                </div>
-
                                 <p class="subtitle">
                                     Created a model to predict hotel reservation cancelation.
                                 </p>
@@ -100,10 +85,6 @@
 
                         <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
                             <div class="img-text-wrapper">
-                                <div class="logo-wrapper">
-                                    <img src="static/images/logos/github-logo.png" alt ="">
-                                </div>
-
                                 <p class="subtitle">
                                     Created a model to predict hotel reservation cancelation.
                                 </p>
@@ -116,16 +97,63 @@
 
             <!-- START BLOGS SECTION -->
             <section id="blogs">
-                <h1>These are my blogs</h1>
+                <div class="blogs-header">
+                    <h1>These are my current blogs</h1>
+                    <h2> With more to me</h2>
+                </div>
                 <div class="blog-content">    
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+
+                    <a href="https://medium.com/analytics-vidhya/plot-with-plotly-basics-9ae546dc03ae" target="_blank"><div class="article-content" style="background-image: url(static/images/plotly.png);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                Plot with Plotly - Basics 
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://dorjeys3.medium.com/matplotlib-quick-and-pretty-enough-to-get-you-started-5f425b55132f" target="_blank"><div class="article-content" style="background-image: url(https://static.javatpoint.com/tutorial/matplotlib/images/matplotlib-tutorial.png);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                MatplotLib: Quick and Pretty (enough) to get your started 
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://medium.com/analytics-vidhya/big-data-but-what-is-it-85e2cc36db89" target="_blank"><div class="article-content" style="background-image: url(https://miro.medium.com/max/890/1*8tI2pUzyviWb6wqD76sbaw.gif);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                Big Data... But what is it?
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                A Violin tells more stories than a Box
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                A Violin tells more stories than a Box
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                A Violin tells more stories than a Box
+                            </p>
+                        </div>
+                    </div></a>
+                    
+                   
+                    
+                    
                     
                 </div>
             </section>
@@ -139,12 +167,7 @@
             </section>
             <!-- END ABOUT SECTION -->
 
-            <!-- START CONTACT SECTION -->
-            <section id="contact">
-                <h1>Contact</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!5</p>
-            </section>
-            <!-- END CONTACT SECTION -->
+    
         </div>
     </body>
     <script>
