major changes to the layout of the webpage. Contents have also been changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,22 +14,32 @@
             <!-- START NAV BAR -->
             <nav class="navbar">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#blogs">Blogs</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#home"><b>Home</b></a></li>
+                    <li><a href="#projects"><b>Projects</b></a></li>
+                    <li><a href="#blogs"><b>Blogs</b></a></li>
+                    <li><a href="#about"><b>About</b></a></li>
+                    <li><a href="static/Dorjey Sherpa Resume.pdf" target="_blank"><b>Resume</b></a></li>
                 </ul>        
+                    
             </nav>
-            <!-- END NAV BAR     -->
+            <!-- END NAV BAR -->
 
             <!-- START HOME SECTION -->
             <section id="home">
                 <div class="home-background">
                     <img src="static/images/ind-rotate.jpeg" alt=""> 
                 </div>
-                <h2 id="left-side-text">I am a Data Scientist </h2>
+                <div class="left-side-text">
+                    <h2> Personal Portfolio</h2>
+                </div>
                 
-                <h2 id="right-side-text"><i>Always eager to learn</i></h2>            
+                
+                <div class="right-side-text"> 
+                    <p><b> Welcome to my portfolio. </b>
+                        <b><br> I am an aspiring Data Scientist and a Machine Learning enthusist.</b>
+                    </p>
+                    
+                </div>            
             </section>
             <!-- END HOME SECTION -->
             
@@ -37,13 +47,22 @@
 
             <!-- START PROJECTS SECTION -->
             <section id="projects">
-                <h1>Here are some projects</h1>
+                <h1>All projects are linked to their respective Github repository</h1>
                 <div class="content-wrapper">
                     <div class="portfolio-items-wrapper">
-                        <a href="https://github.com/dorjeys3/Walmart_proj" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://i.pinimg.com/originals/b0/45/af/b045af8a94343e3b1fdbf1576e9818b8.gif)">
+                        <a href="https://github.com/dorjeys3/Walmart_proj" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://1000logos.net/wp-content/uploads/2017/05/Walmart-Logo-1965.jpg)">
                             <div class="img-text-wrapper">                           
                                 <p class="subtitle">
-                                    Using NLP, Machine Learning models were able to predict which Walmart items would be recommened items based on customers' reviews.
+                                    Using NLP, Machine Learning models predict which Walmart items would be recommened items based on customers' reviews.
+                                </p>
+                            </div>
+                        </div></a>
+
+
+                        <a href="https://github.com/dorjeys3/Hotel-Cancellation-Model" target="_blank"><div class="portfolio-item-wrapper"style="background-image:url(https://images.unsplash.com/photo-1496417263034-38ec4f0b665a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80)">
+                            <div class="img-text-wrapper">
+                                <p class="subtitle">
+                                    Created a model to predict hotel reservation cancelation.
                                 </p>
                             </div>
                         </div></a>
@@ -58,38 +77,16 @@
                             </div>
                         </div></a>
 
+                        <a href="https://github.com/dorjeys3/King_County_Real_Estate" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://images.unsplash.com/photo-1594540992254-0e2239661647?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+                            <div class="img-text-wrapper" >
 
-                        <a href="https://github.com/dorjeys3/Hotel-Cancellation-Model" target="_blank"><div class="portfolio-item-wrapper"style="background-image:url(https://cdn.dribbble.com/users/2859475/screenshots/7551660/media/a6aa2061e5693b544d883e842c479728.gif)">
-                            <div class="img-text-wrapper">
                                 <p class="subtitle">
-                                    Created a model to predict hotel reservation cancelation.
+                                    Prediciting King County Real Estate Price.
                                 </p>
                             </div>
                         </div></a>
 
-                        <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
-                            <div class="img-text-wrapper">
-                                <p class="subtitle">
-                                    Created a model to predict hotel reservation cancelation.
-                                </p>
-                            </div>
-                        </div>
 
-                        <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
-                            <div class="img-text-wrapper">
-                                <p class="subtitle">
-                                    Created a model to predict hotel reservation cancelation.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="portfolio-item-wrapper"style="background-image:url(static/images/hotel.jpeg)">
-                            <div class="img-text-wrapper">
-                                <p class="subtitle">
-                                    Created a model to predict hotel reservation cancelation.
-                                </p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -98,8 +95,7 @@
             <!-- START BLOGS SECTION -->
             <section id="blogs">
                 <div class="blogs-header">
-                    <h1>These are my current blogs</h1>
-                    <h2> With more to me</h2>
+                    <h1>Sharing the learned skills and techniques </h1>
                 </div>
                 <div class="blog-content">    
 
@@ -110,16 +106,16 @@
                             </p>
                         </div>
                     </div></a>
-
-                    <a href="https://dorjeys3.medium.com/matplotlib-quick-and-pretty-enough-to-get-you-started-5f425b55132f" target="_blank"><div class="article-content" style="background-image: url(https://static.javatpoint.com/tutorial/matplotlib/images/matplotlib-tutorial.png);">
+                    
+                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://images.unsplash.com/photo-1566913485268-1287f67f87fe?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
-                                MatplotLib: Quick and Pretty (enough) to get your started 
+                                A Violin tells more stories than a Box
                             </p>
                         </div>
                     </div></a>
 
-                    <a href="https://medium.com/analytics-vidhya/big-data-but-what-is-it-85e2cc36db89" target="_blank"><div class="article-content" style="background-image: url(https://miro.medium.com/max/890/1*8tI2pUzyviWb6wqD76sbaw.gif);">
+                    <a href="https://medium.com/analytics-vidhya/big-data-but-what-is-it-85e2cc36db89" target="_blank"><div class="article-content" style="background-image: url(https://images.unsplash.com/photo-1523274620588-4c03146581a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
                                 Big Data... But what is it?
@@ -127,34 +123,13 @@
                         </div>
                     </div></a>
 
-                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
+                    <a href="https://dorjeys3.medium.com/matplotlib-quick-and-pretty-enough-to-get-you-started-5f425b55132f" target="_blank"><div class="article-content" style="background-image: url(https://matplotlib.org/stable/_static/logo2_compressed.svg);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
-                                A Violin tells more stories than a Box
+                                MatplotLib: Quick and Pretty (enough) to get your started 
                             </p>
                         </div>
                     </div></a>
-
-                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
-                        <div class="img-text-wrapper">
-                            <p class="subtitle">
-                                A Violin tells more stories than a Box
-                            </p>
-                        </div>
-                    </div></a>
-
-                    <a href="https://medium.com/analytics-vidhya/a-violin-is-better-f7068129a14" target="_blank"><div class="article-content" style="background-image: url(https://i.gifer.com/1frp.gif);">
-                        <div class="img-text-wrapper">
-                            <p class="subtitle">
-                                A Violin tells more stories than a Box
-                            </p>
-                        </div>
-                    </div></a>
-                    
-                   
-                    
-                    
-                    
                 </div>
             </section>
             <!-- END BLOGS SECTION -->
@@ -162,8 +137,18 @@
            <!-- START ABOUT SECTION -->
             <section id="about">
                 <h1>About me</h1>
-                <img src="static/images/headshot.jpeg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, magni. Itaque cumque dolores autem quaerat!5</p>
+                <img src="static/images/B&W.jpeg" alt="">
+                <blockquote> 
+                    <p id=blockquote>Data is not there to help tell our story but that it has its own story to tell.</p> 
+                </blockquote>
+                   <p>My name is Dorjey Sherpa. 
+                        <br> I am a Middlebury College graduate with a degree in Neuroscience and a Flatiron School - Data Science alumni. 
+                        <br> Throughout my undergrad research career, 
+                            I thought data was important because it was there to help tell our story.
+                            Post graduation, I worked in retail, sales and fashion and the importance of data held true but in a different way.
+                        <br><b>I realized Data is not there to help tell our story but that it has its own story to tell.</b> With this insight, 
+                            I launched my journey in Data Science. 
+                    </p>
             </section>
             <!-- END ABOUT SECTION -->
 
