--- a/static/main.css
+++ b/static/main.css
@@ -5,8 +5,7 @@
     
 body {
     font-family: "Lato", Helvetica, sans-serif;
-    background: #efefef;
-    /* color: #1f1f1f; */
+    background: white;
     line-height: 1.6;
     height: 100vh;
     overflow: hidden;
@@ -34,7 +33,7 @@ a {
     z-index: 1;
     width: 100vw;
     height: 60px;
-    background: rgba(0,0,0,0.7)
+    background:white;
 }
 
 .navbar ul {
@@ -47,21 +46,28 @@ a {
 
 .navbar ul li {
     margin: 0 1rem;
-    padding: 1em;
+    padding: 1rem;
     font-size: 1.5rem;
-    
+    color: black;
+    padding-bottom: 1rem;
+    border-bottom: 3px solid transparent;
+    transition: border-bottom 0.25s;
 }
 
 .navbar ul li a {
     text-decoration: none;
     text-transform: uppercase;
-    color: #efefef;
+    color: black;
     justify-content: center;
     text-align: center;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.2s;
+
 }
 
 .navbar a:hover {
-    color: lightseagreen !important;
+    color: black !important;
+    border-bottom: 1px solid black;
 }
 
 /* ------- Different sections -------  */
@@ -74,14 +80,15 @@ section {
     height: 100vh;
     /* smooth scroll */
     scroll-snap-align: center;
+    overflow: hidden;
 } 
 
 section h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 section p {
-    font-size: 1.5rem;
+    font-size: 25px;
 } 
 
 /*  ------- Home section ------- */
@@ -108,48 +115,60 @@ section p {
     height: 100%;
 }
 
-#home #left-side-text{
+#home .left-side-text{
     grid-row: 2;
     grid-column: 1;
     font-size: 3rem;
     padding-right: 200px;
+    padding-left: 50px;
+    position: relative;
+    align-content: center;
+    justify-content: center;
 }
 
-#home #right-side-text{
+#home p {
+    font-size: 25px;
+}
+
+#home .right-side-text{
     grid-row: 2;
     grid-column: 3;
-    font-size: 1.5rem;
-    padding-left: 200px;
+    text-align: left;
+    padding-left: 150px;
+    padding-right: 50px;
+    align-content: left;
+    justify-content: left;
 }
-
 
 /* ------- Project Section ------- */
 
 #projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 12.5rem 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: center;
 }
 
 #projects h1 {
     margin: 0;
-    padding-top: 2rem;
-    padding-bottom: 0;
+    padding-top: 4rem;
+    padding-bottom: 2rem;
     grid-row: 1;
     grid-column: 1/-1;
+    color: black;
+    font-size: 2rem;
 }
 
 #projects p {
     color: #efefef transparent;
 }
 
-
 /* changes */
 #projects .portfolio-items-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(auto-fit, 1fr 1fr 1fr);
+    padding-bottom: 10%;
 }
 
 .portfolio-item-wrapper{
@@ -174,19 +193,19 @@ section p {
 #projects .img-text-wrapper .subtitle {
     transition: 0.25s;
     color: white transparent !important;
-    font-weight: 600;
+    font-weight: 1200;
 }
 
 #projects .img-text-wrapper p:hover {
-    font-weight: 600;
+    font-weight: 1200;
     
 }
 
 .img-darken {
     transition: 0.25s;
-    filter: brightness(80%);
-    color: lightseagreen !important;
-    background: rgba(0,0,0,0.7);
+    filter: brightness(90%);
+    color: rgb(255, 255, 255) !important;
+    background: rgba(0,0,0,0.85);
     background-size: cover;
 }
 
@@ -212,8 +231,17 @@ section p {
 }
 
 #blogs h1 {
+    margin: 0;
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+    grid-row: 1;
+    grid-column: 1/-1;
+    color: black;
+}
+
+#blogs h2 {
     margin: 1px;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 0;
     grid-row: 1;
     grid-column: 1/-1;
@@ -224,9 +252,8 @@ section p {
 
 #blogs .blog-content{
     display: grid;
-    grid-template-columns:repeat(4, 1fr);
+    grid-template-columns:repeat(4, 25%);
     grid-template-rows:repeat (2, 1fr);
-    /* grid-row: span 2; */
     grid-template: span 4;
 }
 .article-content {
@@ -259,16 +286,14 @@ section p {
     font-weight: 600;
     transition: 0.2s;
     filter: brightness(80%);
-    color: lightseagreen !important;
-    background: rgba(0,0,0,0.7);
-    background-size: cover;
-    
+    color: white !important;
+    background: rgba(0, 0, 0, 0.85);
 }
 
 .article-content {
     height: 17rem;
     width: 25vw;
-    background-size: auto;
+    background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
     padding: 0px;    
@@ -279,18 +304,42 @@ section p {
 #about {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.75fr 1fr 1fr;
+    grid-template-rows: 0.75fr 1fr 1fr 1fr;
 }
 
 #about h1{
     grid-row: 1;
     grid-column: 1;
-    padding: 10px;
+    padding: 20px;
+    text-align: center;
+    margin: 0;
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+    grid-row: 1;
+    color: black;
 }
+
 #about p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 23px;
+    font-weight: normal;
+    line-height: 1.4em;
+    grid-row: 3;
+    grid-column: 1;
+    text-align: left;
+    text-align: top;
+    padding: 25px;
+}
+
+#about blockquote{
+    display: block;
     grid-row: 2;
     grid-column: 1;
     padding: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+    position: relative;
+    bottom: 0;
 }
 
 #about img {
@@ -300,7 +349,7 @@ section p {
     align-items: center;
     justify-content: center;
     padding-right: 10px;
-    padding-left: 10px;
+    padding-left: 100px;
     padding-top: 75px;
 }
 
