--- a/static/main.css
+++ b/static/main.css
@@ -328,30 +328,45 @@ section p {
     grid-column: 1;
     text-align: left;
     text-align: top;
-    padding: 25px;
-}
-
-#about blockquote{
-    display: block;
-    grid-row: 2;
-    grid-column: 1;
-    padding: 10px;
-    margin-left: 40px;
-    margin-right: 40px;
-    position: relative;
-    bottom: 0;
+    padding-left: 40px;
+    /* justify-content: center;
+    align-content: center; */
 }
 
 #about img {
     grid-column: 2;
     grid-row: span 3;
-    width: 75%;
-    align-items: center;
-    justify-content: center;
-    padding-right: 10px;
-    padding-left: 100px;
+    width: 80%;
+    justify-self: center;
     padding-top: 75px;
 }
+
+#about .contact {
+    grid-column: 1;
+    grid-row: 2;
+    position: relative;
+    transform: translate(-53%, -50);
+}
+
+#about li{
+    list-style: none;
+    margin: 10px 30px;
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px;
+    color: black;
+    border: 1px solid transparent;
+    border-radius: 25%;
+    transition: .2s;
+}
+
+
+#about li:hover{
+    color: black;
+    border: 1px solid black;
+    transition: .2s;
+}
+
 
 @media screen and (max-width: 500px){
 
