--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Dorjey Sherpa • Data Scientist</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="static/main.css">
     </head>
@@ -35,7 +36,7 @@
                 
                 
                 <div class="right-side-text"> 
-                    <p><b> Welcome to my portfolio. </b>
+                    <p><b> Hello! Welcome to my page! </b>
                         <b><br> I am an aspiring Data Scientist and a Machine Learning enthusist.</b>
                     </p>
                     
@@ -82,6 +83,24 @@
 
                                 <p class="subtitle">
                                     Prediciting King County Real Estate Price.
+                                </p>
+                            </div>
+                        </div></a>
+
+                        <a href="https://github.com/dorjeys3/Movies-Analysis" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1651&q=80)">
+                            <div class="img-text-wrapper" >
+
+                                <p class="subtitle">
+                                    Conducted Exploratory Data Analysis on Movie Industry 
+                                </p>
+                            </div>
+                        </div></a>
+
+                        <a href="https://github.com/dorjeys3/flaskapp" target="_blank"><div class="portfolio-item-wrapper" style="background-image:url(static/images/ind-rotate.jpeg)">
+                            <div class="img-text-wrapper" >
+
+                                <p class="subtitle">
+                                    Launched current website via Flaskapp on AWS EC2 instance 
                                 </p>
                             </div>
                         </div></a>
@@ -137,17 +156,17 @@
            <!-- START ABOUT SECTION -->
             <section id="about">
                 <h1>About me</h1>
-                <img src="static/images/B&W.jpeg" alt="">
-                <blockquote> 
-                    <p id=blockquote>Data is not there to help tell our story but that it has its own story to tell.</p> 
-                </blockquote>
-                   <p>My name is Dorjey Sherpa. 
-                        <br> I am a Middlebury College graduate with a degree in Neuroscience and a Flatiron School - Data Science alumni. 
-                        <br> Throughout my undergrad research career, 
-                            I thought data was important because it was there to help tell our story.
-                            Post graduation, I worked in retail, sales and fashion and the importance of data held true but in a different way.
-                        <br><b>I realized Data is not there to help tell our story but that it has its own story to tell.</b> With this insight, 
-                            I launched my journey in Data Science. 
+                <div class="contact">
+                    <ul>
+                        <a href="https://www.linkedin.com/in/dorjeys3/" target="_blank"><li><i class="fa fa-linkedin"></i></li></a>
+                        <a href="https://github.com/dorjeys3" target="_blank"><li><i class="fa fa-github"></i></li></a>
+                        <a href="https://dorjeys3.medium.com/" target="_blank"><li><i class="fa fa-medium"></i></li></a>
+                    </ul>
+                </div>
+                <img src="static/images/headshot2.jpeg" alt="">
+                   <p>My name is Dorjey Sherpa. I am a Flatiron School - Data Science graduate with a focus in Neural Networks and Natural Language Processing. 
+                    Data is not there to help tell our story. Data has its own stories to tell and I enjoy uncovering those insights and following the narrative thread. 
+                        
                     </p>
             </section>
             <!-- END ABOUT SECTION -->
