changed image in about me section and fixed overlapping in home section

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                 
                 <div class="right-side-text"> 
                     <p><b> Hello! Welcome to my page! </b>
-                        <b><br> I am an aspiring Data Scientist and a Machine Learning enthusist.</b>
+                        <b><br> I am a Data Scientist and a Machine Learning enthusist.</b>
                     </p>
                     
                 </div>            
@@ -114,7 +114,7 @@
             <!-- START BLOGS SECTION -->
             <section id="blogs">
                 <div class="blogs-header">
-                    <h1>Sharing the learned skills and techniques </h1>
+                    <h1>Blogs: Sharing the learned skills and techniques </h1>
                 </div>
                 <div class="blog-content">    
 
@@ -163,10 +163,12 @@
                         <a href="https://dorjeys3.medium.com/" target="_blank"><li><i class="fa fa-medium"></i></li></a>
                     </ul>
                 </div>
-                <img src="static/images/headshot2.jpeg" alt="">
-                   <p>My name is Dorjey Sherpa. I am a Flatiron School - Data Science graduate with a focus in Neural Networks and Natural Language Processing. 
-                    Data is not there to help tell our story. Data has its own stories to tell and I enjoy uncovering those insights and following the narrative thread. 
-                        
+                <img src="static/images/headshot.jpeg" alt="">
+                   <p>Data is not here to help tell our story. 
+                       <br> Data has its own stories to tell. 
+                       <br> I enjoy uncovering those stories and following the narrative thread.
+                       <br> My name is Dorjey Sherpa. 
+                       <br> I am a Data Scientist with a focus in Neural Networks and Natural Language Processing.   
                     </p>
             </section>
             <!-- END ABOUT SECTION -->
