--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
                 
                 
                 <div class="right-side-text"> 
-                    <p><b> Hello! Welcome to my page! </b>
-                        <b><br> I am a Data Scientist and a Machine Learning enthusist.</b>
+                    <p><b> Hello! Welcome to my page. </b>
+                        <b><br> I am a Data Scientist and a Machine Learning enthusiast.</b>
                     </p>
                     
                 </div>            
@@ -82,7 +82,7 @@
                             <div class="img-text-wrapper" >
 
                                 <p class="subtitle">
-                                    Prediciting King County Real Estate Price.
+                                    Designed Machine Learning model to Predicit King County Real Estate Price.
                                 </p>
                             </div>
                         </div></a>
@@ -145,7 +145,7 @@
                     <a href="https://dorjeys3.medium.com/matplotlib-quick-and-pretty-enough-to-get-you-started-5f425b55132f" target="_blank"><div class="article-content" style="background-image: url(https://matplotlib.org/stable/_static/logo2_compressed.svg);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
-                                MatplotLib: Quick and Pretty (enough) to get your started 
+                                MatplotLib: Quick and Pretty (enough) to get you started 
                             </p>
                         </div>
                     </div></a>
