--- a/static/main.css
+++ b/static/main.css
@@ -95,7 +95,6 @@ section p {
 
 #home {
     display: grid;
-    overflow: hidden;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: 15rem 1fr 15rem;
     overflow: hidden;
@@ -369,7 +368,7 @@ section p {
     transition: .2s;
 }
 
-
+/* Phone */
 @media screen and (max-width: 500px){
 
     .navbar ul {
@@ -381,6 +380,60 @@ section p {
     
     .navbar ul li {
         font-size: 0.8rem;
-        padding: 0.5em;
+        padding: 1em;
+        margin: 0px;
+    }
+        /* Phone home */
+    #home {
+        display: grid;
+        overflow: hidden;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 15rem 1fr 15rem;
+    }
+    
+    
+    .home-background {
+        grid-row: 2;
+        grid-column: 1/-1;
+        position: relative;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+    #home img {
+        width: 90vw;
+        height: 40vh;
+        padding-top: 40px;
+    }
+    
+    #home .left-side-text{
+        grid-row: 1;
+        grid-column: 1/-1;
+        font-size: 3rem;
+        padding-top: 4rem;
+        position: relative;
+        align-content: center;
+        justify-content: center;
+    }
+    #home h2 {
+        line-height: 100px;
+    }
+    
+    
+    #home .right-side-text{
+        grid-row: 3;
+        grid-column: 1/-1;
+        padding: 0;
+        position: relative;
+        align-content: center;
+        justify-content: center;
+        vertical-align: top;
+    } 
+
+    #home p {
+        font-size: 15px;
+        text-align: center;
+        vertical-align: justify;
+        
     }
 }
