--- a/static/main.css
+++ b/static/main.css
@@ -168,7 +168,7 @@ section p {
 #projects .portfolio-items-wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr 1fr 1fr);
+    grid-template-rows: 1fr 1fr;
     padding-bottom: 10%;
 }
 
@@ -240,13 +240,6 @@ section p {
     color: black;
 }
 
-#blogs h2 {
-    margin: 1px;
-    padding-top: 1rem;
-    padding-bottom: 0;
-    grid-row: 1;
-    grid-column: 1/-1;
-}
 #blogs p {
     color: #efefef transparent;
 }
@@ -369,7 +362,7 @@ section p {
 }
 
 /* Phone */
-@media screen and (max-width: 500px){
+@media screen and (max-width: 800px){
 
     .navbar ul {
         display: flex;
@@ -383,7 +376,7 @@ section p {
         padding: 1em;
         margin: 0px;
     }
-        /* Phone home */
+        
     #home {
         display: grid;
         overflow: hidden;
@@ -432,6 +425,124 @@ section p {
 
     #home p {
         font-size: 15px;
+        text-align: center;
+        vertical-align: justify;
+        
+    }
+                                    /* PROJECTS */
+    #projects {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 15rem 1fr;
+        justify-content: center;
+    }
+    
+    #projects h1 {
+        font-size: 1.5rem;
+    }
+    
+    #blogs {
+        display: grid;
+        justify-content: center;
+        grid-template-rows: 15rem 1fr;
+        overflow: hidden;
+    }
+
+    #blog .blog-header{
+        grid-row: 1;
+        grid-column: 1/-1;
+    }
+    #blogs h1 {
+        color: black;
+        font-size: 1.5rem;
+    }
+    
+    #blogs .blog-content{
+        grid-row: 2;
+        grid-column: 1/-1;
+        display: grid;
+        grid-template-columns: 49%% 49%;
+        grid-template-rows: 1fr 1fr;
+        
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* iPad */
+@media screen and (max-width: 1050px) and (min-width:800px){
+
+    .navbar ul {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .navbar ul li {
+        font-size: 2rem;
+        padding: 1em;
+        margin: 0px;
+    }
+        /*home */
+
+    #home {
+        display: grid;
+        overflow: hidden;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 15rem 1fr 25rem;
+    }
+
+    .home-background {
+        grid-row: 2;
+        grid-column: 1/-1;
+        position: relative;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+    #home img {
+        width: 100vw;
+        height: 50vh;
+        /* padding-top: 40px; */
+    }
+    
+    #home .left-side-text{
+        grid-row: 1;
+        grid-column: 1/-1;
+        font-size: 3rem;
+        position: relative;
+        align-content: center;
+        justify-content: center;
+        padding: 0;
+        padding-top: 4rem;
+    }
+    #home h2 {
+        line-height: 100px;
+    }
+    #home .right-side-text{
+        grid-row: 3;
+        grid-column: 1/-1;
+        padding: 0;
+        position: relative;
+        align-content: center;
+        justify-content: center;
+        vertical-align: top;
+        margin: 0;
+    } 
+
+    #home p {
+        font-size: 45px;
         text-align: center;
         vertical-align: justify;
         
