--- a/templates/index.html
+++ b/templates/index.html
@@ -118,6 +118,14 @@
                 </div>
                 <div class="blog-content">    
 
+                    <a href="https://dorjeys3.medium.com/beginners-guide-from-collections-import-counter-d93bcecd190b" target="_blank"><div class="article-content" style="background-image: url(https://images.unsplash.com/photo-1526379095098-d400fd0bf935?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                Beginners guide: from collections import Counter
+                            </p>
+                        </div>
+                    </div></a>
+
                     <a href="https://medium.com/analytics-vidhya/plot-with-plotly-basics-9ae546dc03ae" target="_blank"><div class="article-content" style="background-image: url(static/images/plotly.png);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
