--- a/static/main.css
+++ b/static/main.css
@@ -361,8 +361,24 @@ section p {
     transition: .2s;
 }
 
-/* Phone */
+
+
+
+
+
+
+
+/* iPhone and iPad */
 @media screen and (max-width: 800px){
+
+    .container {
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+        scroll-behavior: auto;
+        scroll-snap-type: none;
+    }
+    
 
     .navbar ul {
         display: flex;
@@ -429,10 +445,12 @@ section p {
         vertical-align: justify;
         
     }
-                                    /* PROJECTS */
+    
+    /* PROJECTS */
+
     #projects {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto, 1fr);
         grid-template-rows: 15rem 1fr;
         justify-content: center;
     }
@@ -440,14 +458,27 @@ section p {
     #projects h1 {
         font-size: 1.5rem;
     }
+    .img-darken {
+        transition: 0.2s;
+        filter: brightness(90%);
+        color: rgb(255, 255, 255) transparent;
+        background: rgba(0,0,0,0.85);
+        background-size: cover;
+    }
+    #projects .img-text-wrapper p:hover {
+        font-weight: 1200;
+        color: transparent !important;
+        
+    }
     
+    /* BLOGS */
+
     #blogs {
         display: grid;
         justify-content: center;
         grid-template-rows: 15rem 1fr;
         overflow: hidden;
     }
-
     #blog .blog-header{
         grid-row: 1;
         grid-column: 1/-1;
@@ -461,18 +492,79 @@ section p {
         grid-row: 2;
         grid-column: 1/-1;
         display: grid;
-        grid-template-columns: 49%% 49%;
-        grid-template-rows: 1fr 1fr;
-        
+        grid-template-columns: repeat(auto-fit, 25%);
+        grid-template-rows: repeat(auto-fit, 1fr);
+        grid-template: span 2;
+        padding-top: 0px;
+    }
+    #blogs .img-text-wrapper:hover {
+        font-weight: 600;
+        transition: 0.2s;
+        filter: brightness(80%);
+        color: white transparent !important;
+        background: rgba(0, 0, 0, 0.85);
+    
+    }
+        /* About Me */
+
+    #about {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 0.75fr 0.5fr 1fr 1fr 0.2fr;
+    }
+    #about h1{
+        grid-row: 1;
+        grid-column: 1/-1;
+        padding: 0;
+        text-align: center;
+        margin: 0;
+        padding-top: 3rem;
+        padding-bottom: 0;
+        color: black;
+    }
+
+    #about p{
+        font-family: 'lato', Times, serif;
+        font-size: 18px !important;
+        line-height: 1.2em;
+        grid-row: 4;
+        grid-column: 1/-1;
+        text-align: left;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    #about .contact {
+        grid-column: 1/-1;
+        grid-row: 2;
+        position: relative;
+        transform: translate(-53%, -50);
     }
     
+    #about li{
+        list-style: none;
+        display: inline-block;
+        font-size: 18px;
+        color: black;
+        border: 1px solid;
+        border-radius: 25%;
+        transition: .2s;
+    }
+    
+    #about li:hover{
+        color: black;
+        border: 1px solid black;
+        transition: .2s;
+    }
+    #about img {
+        grid-column: 1/-1;
+        grid-row: 3;
+        width: 80%;
+        height: 100%;
+        justify-self: center;
+        padding-top: 0px;
+    }
 }
-
-
-
-
-
-
 
 
 
