--- a/static/main.css
+++ b/static/main.css
@@ -196,6 +196,8 @@ section p {
     transition: 0.2s;
     color: white transparent !important;
     font-weight: 1200;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 #projects .img-text-wrapper p:hover {
@@ -271,6 +273,8 @@ section p {
     transition: 0.2s;
     color: white transparent !important;
     font-weight: 600;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 #blogs .img-text-wrapper:hover {
@@ -466,10 +470,15 @@ section p {
         background: rgba(0,0,0,0.85);
         background-size: cover;
     }
+
+    #projects .img-text-wrapper p {
+        font-weight: 1200;
+        font-size: .5rem;
+    }
     #projects .img-text-wrapper p:hover {
         font-weight: 1200;
-        color: transparent !important;
-        
+        color: white !important;
+        font-size: .5rem;
     }
     
     /* BLOGS */
@@ -498,6 +507,14 @@ section p {
         grid-template: span 2;
         padding-top: 0px;
     }
+    #blogs .img-text-wrapper .subtitle {
+        transition: 0.2s;
+        color: white transparent !important;
+        font-size: .5rem;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
     #blogs .img-text-wrapper:hover {
         font-weight: 600;
         transition: 0.2s;
