--- a/templates/index.html
+++ b/templates/index.html
@@ -118,6 +118,22 @@
                 </div>
                 <div class="blog-content">    
 
+                    <a href="https://dorjeys3.medium.com/intro-to-univariate-analysis-de75454b4719" target="_blank"><div class="article-content" style="background-image: url(https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                A Deeper dive into Univariate Analysis
+                            </p>
+                        </div>
+                    </div></a>
+
+                    <a href="https://medium.com/analytics-vidhya/univariate-bivariate-and-multivariate-analysis-8b4fc3d8202c" target="_blank"><div class="article-content" style="background-image: url(https://miro.medium.com/max/1400/0*bY6bbBimeQWdlWxI);">
+                        <div class="img-text-wrapper">
+                            <p class="subtitle">
+                                Introduction to Univariate, Bivariate and Multivariate Analysis
+                            </p>
+                        </div>
+                    </div></a>
+
                     <a href="https://dorjeys3.medium.com/beginners-guide-from-collections-import-counter-d93bcecd190b" target="_blank"><div class="article-content" style="background-image: url(https://images.unsplash.com/photo-1526379095098-d400fd0bf935?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80);">
                         <div class="img-text-wrapper">
                             <p class="subtitle">
